<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="30dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="200dp" android:layout_height="wrap_content">
    <ImageView
        android:layout_width="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_height="100dp"/>
<TextView
    android:layout_width="wrap_content"
    android:text="@string/enter_pin"
    android:textSize="16sp"
    android:textColor="@color/colorPrimaryDark"
    android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/pin"
        android:textSize="16sp"
        android:inputType="numberPassword"
        android:textColor="#000"
        android:id="@+id/pin"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/button"
        android:text="@string/go"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_height="wrap_content"/>
</LinearLayout>