<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_margin="8dp"
            android:textSize="15sp"
            android:layout_gravity="end"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#42A2A2A2"
            android:onClick="addNewNote"
            android:id="@+id/addNewNote"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/new_note"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_margin="8dp"
            android:textSize="15sp"
            android:layout_gravity="end"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#42A2A2A2"
            android:onClick="addNewWebsite"
            android:id="@+id/addNewWebsite"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/new_website"
            android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:gravity="end"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:layout_gravity="end"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#42A2A2A2"
        android:onClick="changePin"
        android:id="@+id/changePin"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/change_pin"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/my_notes"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_height="1dp"/>
    <ListView
        android:layout_width="match_parent"
        android:id="@+id/listview"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"/>
</LinearLayout>